--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2>Get In Touch</h2>
       <h3>If you want to discuss any ideas</h3>
       <p class="last-info">You can discuss with me about the design of the web appliction you require</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <a class="btn" href="mvshashank22@gmail.com">CONTACT ME</a>
     </div>
   </div>
   
@@ -55,7 +55,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="">Website</a>
     <p class="copy-right">© 2020 M V SHASHANK.</p>
   </div>
   
