--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2>Get In Touch</h2>
       <h3>If you want to discuss any ideas</h3>
       <p class="last-info">You can discuss with me about the design of the web appliction you require</p>
-      <a class="btn" href="mvshashank22@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:mvshashank22@gmail.com">CONTACT ME</a>
     </div>
   </div>
   
