--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="profile">
       <img class="mimage" src="images/mimage.jpg" alt="logo">
       <h2>Hello.</h2>
-      <p class="intro">I am a student currently studying in Bits,pilani.I previusly completed my pre university 
+      <p class="intro">I am a student currently studying in Bits,pilani.I previusly completed my pre university
           in Narayana educational group.
       </p>
     </div>
@@ -29,15 +29,15 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skill" src="images/skill-image.jpg" alt="skill-image">
-        <h3>Developer</h3>
-        <p class="developer-description">Worked on a job-portal website for platifi soltions,Bangalore in of 10 members.Worked 
+        <h3>Programmer</h3>
+        <p class="developer-description">Worked on a job-portal website for platifi soltions,Bangalore in a group of 10 members.Worked
             in backend team.
         </p>
       </div>
       <div class="skill-row">
         <img class="skills1" src="images/skills1.jpg" alt="skills1">
         <h3>Coder</h3>
-        <p class="code-description">Solves problems on codechef.Currently having 3 star rating in codechef and has about 9 months 
+        <p class="code-description">Solves problems on codechef.Currently having 3 star rating in codechef and has about 9 months
             of experience in competitive coding
         </p>
       </div>
@@ -46,18 +46,18 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you want to discuss any ideas</h3>
-      <p class="last-info">You can discuss with me about the design of the web appliction you require</p>
+      <p class="last-info">You can discuss with me about the creation of new web applications</p>
       <a class="btn" href="mailto:mvshashank22@gmail.com">CONTACT ME</a>
     </div>
   </div>
-  
-  
+
+
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="">Website</a>
     <p class="copy-right">© 2020 M V SHASHANK.</p>
   </div>
-  
+
 </body>
 </html>
